# pso-project

./: .gitignore  README.md  make_viz.py  pyproject.toml  run_benchmarks.py  run_grid_search.py  run_portfolio.py  run_pso.py  run_scipy_comparison.py
config/: benchmarks.yaml  default.yaml
core/: __init__.py  particle.py  stopcriteria.py  swarm.py  topology.py
docs/: design.md  informe_final.md
experiments/: __init__.py  benchmark_suite.py  grid_search.py  runner.py
io/: loader.py  persistence.py
objectives/: __init__.py  ackley.py  base.py  functions.py  portfolio.py  rastrigin.py  rosenbrock.py  sphere.py
parallel/: __init__.py  async_eval.py  base_evaluator.py  numpy_eval.py  process_eval.py  sequential.py  threading_eval.py
results/: summary.csv
storage/: __init__.py  loader.py  persistence.py
tests/: test_async_eval.py  test_core.py  test_numpy_eval.py  test_objectives.py  test_parallel.py  test_portfolio.py
viz/: __init__.py  convergence.py  swarm_plot.py
