[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pso-project"
version = "0.1.0"
description = "Particle Swarm Optimization con estrategias paralelas (V0-V2)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "objectives*", "parallel*", "experiments*", "storage*", "viz*"]

[tool.pytest.ini_options]
testpaths = ["tests"]